--- a/views/partials/top.html
+++ b/views/partials/top.html
@@ -4,6 +4,7 @@
 		<ul class="nav nav-tabs nav-justified">
 			<li {% if top == 'index'%} class="active" {% endif %}><a href="/">Home</a></li>
 			<li {% if top == 'users'%} class="active" {% endif %}><a href="/users">Usuarios</a></li>
+			<li><a href="/report">Informe</a></li>
 		</ul>
 	{% endblock %}
 	</div>
