--- a/views/layout.html
+++ b/views/layout.html
@@ -38,6 +38,7 @@
 {% endblock %}
 
 {% block scripts %}
+	<script src="https://code.jquery.com/jquery-latest.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 {% endblock %}
 </html>
