--- a/views/users/users.html
+++ b/views/users/users.html
@@ -2,13 +2,13 @@
 
 {% block content %}
 	{{ super() }}
-	{% for %}
 	<table class="table table-striped">
 		<thead>
 			<tr>
 				<th>Nombre</th>
 				<th>Apellidos</th>
 				<th>Email</th>
+				<th></th>
 			</tr>
 		</thead>
 		<tbody>
@@ -17,6 +17,7 @@
 					<td>{{user.nombre}}</td>
 					<td>{{user.apellidos}}</td>
 					<td><a href="mailto:{{user.email}}">{{user.email}}</a></td>
+					<td><a href="/users/{{user.id}}" class="btn btn-default btn-sm">Ver usuario</a></td>
 				</tr>
 			{% else %}
 			<tr>
