--- a/views/partials/top.html
+++ b/views/partials/top.html
@@ -9,6 +9,6 @@
 	{% endblock %}
 	</div>
 	<div class="col-md-6">
-		<img src="/public/images/logo.svg" class="img-responsive pull-right" alt="Logo Existo">
+		<img src="/images/logo.svg" class="img-responsive pull-right" alt="Logo Existo">
 	</div>
 </div>
