--- a/views/layout.html
+++ b/views/layout.html
@@ -16,8 +16,6 @@
 	{% endblock %}
 
 	{% block stylesheets %}
-	<link rel="stylesheet" href="/public/stylesheets/style.css"/>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	{% endblock %}
 </head>
 {% endblock %}
@@ -31,14 +29,12 @@
 	{% endblock %}
 	<div class="container">
 	{% block content %}
-
 	{% endblock %}
 	</div>
 </body>
 {% endblock %}
 
 {% block scripts %}
-	<script src="https://code.jquery.com/jquery-latest.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src="/js/bundle.js"></script>
 {% endblock %}
 </html>
