generando css a partir de bootstrap y scss con webpack

--- a/views/layout.html
+++ b/views/layout.html
@@ -16,6 +16,7 @@
 	{% endblock %}
 
 	{% block stylesheets %}
+		<link rel="stylesheet" href="/css/main.css">
 	{% endblock %}
 </head>
 {% endblock %}
